test/programs/invalid_programs/dependent_types/missing_method_overload.jm
#!TypeError

def n_times(n:Int, fn)
  i = 0
  while i < n
    fn()
    i = i + 1
  end
end

def n_times(n:Int, fn)
  i = 0
  while i < n
    fn(i)
    i = i + 1
  end
end

n_times(2, => puts("foo"))
